# dream-docs-admin-iced

./: .gitignore  Cargo.toml  README.md  TODO.md  bacon.toml
src/: main.rs  sample_data.rs
src/components/: button.rs  document_table.rs  login.rs  mod.rs  navbar.rs  student_profile_info.rs  students_table.rs  views.rs
src/custom_settings/: nothing.rs  window_settings.rs
src/models/: mod.rs  student.rs
src/models/supabase_models/: class.rs  downloads_cache.rs  file.rs  file_key.rs  insert_error_response.rs  mod.rs  program.rs  queryable_response.rs  student.rs  student_profile_data.rs
src/models/turso_models/: file.rs  mod.rs
src/operations/: file_opp.rs  login_opp.rs  mod.rs  secret_opp.rs  supabase_opp.rs  turso_opp.rs
src/styles/: button_styles.rs  mod.rs
src/types/: active_status.rs  file_status.rs  mod.rs  task_types.rs
