[package]
name = "ice-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
iced = { version = "0.13.1", features = [
    "tokio",
    "image",
    "advanced",
    "canvas",
] }
libsql = "0.6.0"
once_cell = "1.20.2"
openssl = "0.10.68"
postgrest = "1.6.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
